Clase css required para formularios e implementación en vista de registro de usuarios

--- a/public/css/laratter.css
+++ b/public/css/laratter.css
@@ -5,6 +5,11 @@ Gris: #D8CBC7
 Naranja: #CC3F0C
 Amarillo: #9A6D38 */
 
+.required:after{
+   content:"*";
+   color:red;
+}
+
 .navbar{
   background-color: #0E3E47;
 }
